Return timespan for counted orders as part of data structure.
